--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -99,6 +99,7 @@ services:
       - REDIS_PORT=6379
       - RESET_QUEUE=1
       - SELENIUM_SERVER_URL=http://selenium_dex:4444/wd/hub
+      - GMGN_WORKERS=1
     volumes: [ "./:/src" ]
     depends_on:
       redis: # подождать, пока контейнер запущен
