--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,39 +1,53 @@
 services:
-  # ───────────────── Redis ─────────────────
+
   redis:
     image: redis:7-alpine
     restart: unless-stopped
     ports: ["6379:6379"]
     volumes: [redis-data:/data]
 
-  # ────────── Selenium #1 — DexScreener ──────────
+
+  selenium_gmgn:
+    image: selenium/standalone-chrome:138.0.7204.183-chromedriver-138.0.7204.183-grid-4.34.0-20250727
+    container_name: selenium-gmgn
+    shm_size: "2g"
+    ports:
+      - "4444:4444"   # UI/API GMGN-ноды
+      - "7900:7900"   # noVNC GMGN
+    environment:
+      - SE_NODE_HEADLESS=false
+      - SE_NODE_GRID_URL=http://localhost:4444
+    healthcheck:
+      test: [ "CMD-SHELL","curl -fsS http://localhost:4444/status | grep -q '\"ready\": *true'" ]
+      interval: 5s
+      timeout: 5s
+      retries: 30
+      start_period: 10s
+
   selenium_dex:
-    image: selenium/standalone-chrome:4.21.0-20240521
+    # лучше взять такой же “прибитый” образ, как в первом проекте
+    image: selenium/standalone-chrome:138.0.7204.183-chromedriver-138.0.7204.183-grid-4.34.0-20250727
     container_name: selenium-dex
     shm_size: "2g"
-    ports: ["4444:4444"]          # UI/VNC наружу (уберите, если не нужно)
+    ports:
+      - "4445:4444"
+      - "7901:7900"
+    environment:
+      # ВАЖНО для Playwright+Grid: адрес, по которому узел регистрируется в хабе
+      # (в standalone это сам контейнер → localhost)
+      - SE_NODE_GRID_URL=http://localhost:4444
+      # чтобы можно было смотреть noVNC, и некоторые антиботы вели себя мягче
+      - SE_NODE_HEADLESS=false
+      # опционно, чтобы не пересекались сессии
+      - SE_NODE_MAX_SESSIONS=1
     healthcheck:
-      test: ["CMD-SHELL", "curl -fsS http://localhost:4444/status | grep -q '\"ready\": *true'"]
+      test: [ "CMD-SHELL","curl -fsS http://localhost:4444/status | grep -q '\"ready\": *true'" ]
       interval: 5s
       timeout: 5s
-      retries: 12
-      start_period: 5s
+      retries: 30
+      start_period: 10s
 
-  # ────────── Selenium #2 — test_cap ──────────
-  selenium_testcap:
-    image: selenium/standalone-chrome:4.21.0-20240521
-    container_name: selenium-testcap
-    shm_size: "2g"
-    environment: [SE_NODE_HEADLESS=false]
-    ports: ["4445:4444"]
-    healthcheck:
-      test: ["CMD-SHELL", "curl -fsS http://localhost:4444/status | grep -q '\"ready\": *true'"]
-      interval: 5s
-      timeout: 5s
-      retries: 12
-      start_period: 5s
 
-  # ───────────────── Scraper (DexScreener) ─────────────────
   scraper:
     build: .
     depends_on:
@@ -43,7 +57,7 @@ services:
       - SELENIUM_SERVER_URL=http://selenium_dex:4444/wd/hub
     volumes: ["./output:/app/output"]
 
-  # ───────────────── Producer ─────────────────
+
   producer:
     build:
       context: .
@@ -61,54 +75,29 @@ services:
     volumes: ["./:/src"]
     depends_on: [redis]
 
-  # ───────────────── cookie_init (одноразовый) ─────────────────
-  cookie_init:
-    build: .
-    entrypoint: [ "python", "-m", "src.scraper.gmgn.push_cookie_tasks" ]
-    restart: "no"
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    depends_on:
-      redis:
-        condition: service_started
 
-  test_cap:
-    build:
-      context: .
-      dockerfile: Dockerfiles/Dockerfile.test_cap   # упрощённый Dockerfile
-    environment:
-      - SELENIUM_SERVER_URL=http://selenium_testcap:4444/wd/hub
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - WAIT_FOR_CLICK=30
-    depends_on:
-      selenium_testcap:
-        condition: service_healthy
-      cookie_init:
-        condition: service_completed_successfully
 
-  # ───────────────── Worker (gmgn sync_scraper) ─────────────────
   worker:
     build:
       context: .
       dockerfile: ./Dockerfiles/Dockerfile.pnl_produces
     command: python -m src.scraper.gmgn.sync_scraper
     environment:
+      - SELENIUM_REMOTE_URL=http://selenium_gmgn:4444
+      - PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
+      - DEBUG=pw:browser*
+      - PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - RESET_QUEUE=1
-      - SELENIUM_SERVER_URL=http://selenium_dex:4444/wd/hub
       - GMGN_WORKERS=1
       - LOG_LEVEL=DEBUG
     volumes: [ "./:/src" ]
     depends_on:
-      redis: # подождать, пока контейнер запущен
+      redis:
         condition: service_started
-      selenium_dex: # дождаться health-check’а
+      selenium_gmgn: # ← сюда!
         condition: service_healthy
-      cookie_init: # дождаться успешного завершения скрипта
-        condition: service_completed_successfully
     logging:
       driver: json-file
       options:
