--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
     container_name: selenium-gmgn
     shm_size: "2g"
     ports:
-      - "4444:4444"   # UI/API GMGN-ноды
-      - "7900:7900"   # noVNC GMGN
+      - "4444:4444"
+      - "7900:7900"
     environment:
       - SE_NODE_HEADLESS=false
       - SE_NODE_GRID_URL=http://localhost:4444
@@ -73,8 +73,8 @@ services:
           },
           "proxy":{
             "proxyType":"manual",
-            "httpProxy":"196.18.2.145:8000",
-            "sslProxy":"196.18.2.145:8000"
+            "httpProxy": "ZvMv3G:3ySzNZ@196.18.2.145:8000",
+            "sslProxy":  "ZvMv3G:3ySzNZ@196.18.2.145:8000"
           }
         }
       DEBUG: pw:browser*
